# bump-minimum-dependencies

./: .gitignore  .pre-commit-config.yaml  LICENSE  PlayingWithPyPIJSON.ipynb  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
src/bump_minimum_dependencies/: __init__.py  bump.py
tests/: test_bump.py
tests/data/: cabinet.json  numpy.json  pyproject.expected.toml  pyproject.toml
tests/json/: plasmapy.json
