[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.5,<0.10" ]

[project]
name = "bump-minimum-dependencies"
version = "0.1.0"
description = "Command line tool to bump minimum dependencies in pyproject.toml"
readme = "README.md"
authors = [
  { name = "Nick Murphy", email = "namurphy@cfa.harvard.edu" },
]
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "click==8.3",
  "dep-logic>=0.5.2",
  "pyproject-parser>=0.13",
]

scripts.bump-minimum-dependencies = "bump_minimum_dependencies:main"

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "nox>=2025.10.16",
  "prek>=0.2.12",
  "pytest>=8.4.2",
  "pytest-freezer>=0.4.9",
  "ty>=0.0.1a25",
]

[tool.uv.workspace]
members = [
  "tests/data/temporary",
]
